Tests/RunCMake/CMakePresets/InvalidVariableValue-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidVariableValue:
Error: @10,20: "value" expected a string
          "value": \[\]
                   \^$
